# aws-restaurant-app

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md
backend/: README.md  generate_tokens.py  pyproject.toml  quick_seed.py  restaurant-app.postman_collection.json  sqs-pipeline.md  swagger-ui.html  test_endpoints.py  test_sqs_endpoints.py
backend/restaurant-backend-app/: .gitignore  CHANGELOG.md  deployment_resources.json
backend/restaurant-backend-app/export/: restaurant_api.json
backend/restaurant-backend-app/pyapp/src/commons/: __init__.py  abstract_lambda.py  app_config.py  dynamo_model.py  error_utils.py  exceptions.py  jwt_decoder.py  log_helper.py  report_utils.py  response.py  router.py  uuid_utils.py
backend/restaurant-backend-app/pyapp/src/domain/: __init__.py  admin.py  admin_email.py  auth_result.py  dish.py  feedback.py  location.py  location_report.py  login_attempts.py  order.py  order_item.py  reservation.py  reservation_waiter_view.py  shift.py  slot.py  table.py  user.py  waiter_emails.py  waiter_report.py
backend/restaurant-backend-app/pyapp/src/dto/: __init__.py  available_tables.py  create_booking.py  customers.py  dishes.py  error_response.py  feedback_event.py  feedbacks.py  locations.py  logout.py  orders.py  popular_dishes.py  refresh.py  reports.py  reservation_event.py  reservation_management.py  sign_in.py  sign_up.py  sign_up_request.py  sign_up_response.py  tables.py  user_profile.py  waiter_reservations.py
backend/restaurant-backend-app/pyapp/src/enums/: __init__.py  dish_state.py  dish_type.py  feedback_type.py  http_status_code.py  reservation_status.py  slot_status.py  user_role.py
backend/restaurant-backend-app/pyapp/src/lambdas/: __init__.py
backend/restaurant-backend-app/pyapp/tests/: __init__.py  conftest.py
backend/restaurant-backend-app/swagger_src/restaurant-api-ui/: index.html  swagger_ui_config.json
backend/seeds/: __init__.py  admin_emails.py  admins.py  cognito_users.py  config.py  customers.py  dishes.py  feedback_cuisine.py  feedback_culinary.py  feedback_service.py  location_report.py  locations.py  orders.py  reservation_waiter_view.py  reservations.py  shifts.py  slots.py  tables.py  utils.py  waiter_emails.py  waiter_report.py  waiters.py
(+211 files in other folders)
