[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aws-syndicate>=1.19.1",
    "pydantic[email]>=2.13.4",
    "argon2-cffi>=23.1.0",
    "boto3>=1.38.12",
    "ruff>=0.15.12",
]

[tool.ruff.lint]
select = ["E", "F", "I", "D"]  # D = pydocstyle rules
ignore = ["E501"]  # line length not enforced

[tool.ruff.lint.pydocstyle]
convention = "google"  # or "numpy" or "pep257"

