[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aws-syndicate",
    "pip==26.1.1",
    "pre-commit==4.6.0",
    "pyjwt==2.12.1",
    "structlog==25.5.0",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pydantic[email]==2.13.4",
    "pydantic-settings==2.0.0",
    "argon2-cffi==23.1.0",
    "boto3==1.38.12",
    "ruff",
    "pytest==9.0.3",
    "structlog==25.5.0",
]


[tool.pytest.ini_options]
testpaths = ["restaurant-backend-app/pyapp/tests"]
pythonpath = ["restaurant-backend-app"]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = [".venv", "__pycache__"]

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["E501"]  # line length not enforced

[tool.ruff.lint.per-file-ignores]
"quick_seed.py" = ["E402"]
"backend/quick_seed.py" = ["E402"]
